processor/src/test/resources/model/bad/PrivateFieldModelWithoutAccessors.java
package com.bluelinelabs.logansquare.processor.bad;

import com.bluelinelabs.logansquare.annotation.JsonField;
import com.bluelinelabs.logansquare.annotation.JsonObject;

@JsonObject
public class PrivateFieldModelWithoutAccessors {

    @JsonField
    private String string;

}
